--- a/css/team.css
+++ b/css/team.css
@@ -30,7 +30,7 @@ body{
    	padding-right: 10px;
    	padding-bottom: 50px
    	font-size: 2.5vh;
-   	color: white;
+   	color: black;
 }
 
 .myCaption h2{
